--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,9 @@
   h6 {
     @apply text-sm;
   }
+  button {
+    @apply border-none font-body cursor-pointer bg-none;
+  }
 }
 
 :root {
@@ -47,23 +50,4 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
